--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.6.0",
-    "@capacitor/android": "^2.3.0",
-    "@capacitor/core": "^2.3.0",
+    "@capacitor/android": "^3.0.2",
+    "@capacitor/app": "^1.0.2",
+    "@capacitor/core": "^3.0.2",
+    "@capacitor/network": "^1.0.2",
+    "@capacitor/push-notifications": "^1.0.2",
+    "@capacitor/splash-screen": "^1.0.2",
     "@ionic-native/app-version": "^5.33.1",
     "@ionic-native/call-number": "^5.28.0",
-    "@ionic-native/core": "^5.27.0",
+    "@ionic-native/core": "^5.34.0",
     "@ionic-native/email-composer": "^5.33.1",
     "@ionic-native/geolocation": "^5.19.1",
     "@ionic/react": "^5.2.3",
@@ -91,7 +95,7 @@
     "style-loader": "1.0.0",
     "terser-webpack-plugin": "1.4.1",
     "ts-pnp": "1.1.4",
-    "typescript": "3.6.3",
+    "typescript": "^4.1.6",
     "url-loader": "2.1.0",
     "webpack": "4.41.0",
     "webpack-dev-server": "^3.11.2",
@@ -118,7 +122,7 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "1.4.0"
+    "@capacitor/cli": "^3.0.2"
   },
   "jest": {
     "roots": [
